Hosting Translated file

--- a/Newsletter/src/pages/index.html
+++ b/Newsletter/src/pages/index.html
@@ -6,7 +6,7 @@ subject: Newsletter
 <container>
   <row class="header">
     <columns small="12" large="12" valign="middle">
-      <a href="#"><img src="https://i.imgur.com/9oRjKxe.png" class="logo"/></a>
+      <a href="#"><img src="https://github.com/ViswaasLP/Newsletter-Email/blob/main/Newsletter/src/assets/img/Banner.png?raw=true" class="logo"/></a>
     </columns>
   </row>
 </container>
@@ -35,7 +35,7 @@ subject: Newsletter
   <row class="img">
     <columns>
       <a href="#">
-        <img src="https://i.imgur.com/S1YaDW8.png" class="asco float-center" />
+        <img src="https://github.com/ViswaasLP/Newsletter-Email/blob/main/Newsletter/src/assets/img/Thumbnail.png?raw=true" class="asco float-center" />
       </a>
     </columns>
   </row>
@@ -74,14 +74,14 @@ subject: Newsletter
         <columns small="12" large="12" valign="middle">
           <a href="#"
             ><img
-              src="https://i.imgur.com/u9lDbsF.png"
+              src="https://github.com/ViswaasLP/Newsletter-Email/blob/main/Newsletter/src/assets/img/LearnMore.png?raw=true"
               class="button float-left"
           /></a>
         </columns>
       </row>
       <row>
         <columns>
-          <img src="https://i.imgur.com/jMlzT99.png" class="sign float-left" />
+          <img src="https://github.com/ViswaasLP/Newsletter-Email/blob/main/Newsletter/src/assets/img/Signature.png?raw=true" class="sign float-left" />
         </columns>
       </row>
     </columns>
@@ -96,7 +96,7 @@ subject: Newsletter
       <center>
         <a href="#"
           ><img
-            src="https://i.imgur.com/Y3oTSbv.png"
+            src="https://github.com/ViswaasLP/Newsletter-Email/blob/main/Newsletter/src/assets/img/Social.png?raw=true"
             class="follow float-center"
         /></a>
       </center>
