--- a/Newsletter/src/pages/index.html
+++ b/Newsletter/src/pages/index.html
@@ -18,7 +18,7 @@ subject: Newsletter
 <container>
   <row class="start">
     <columns class="indent">
-      <p style="padding-bottom: 15px; padding-top: 15px;">Dear Ketsia,</p>
+      <p style="padding-bottom: 15px; padding-top: 15px;">Dear Viswaas,</p>
       <p>
         Recently, more than 40,000 clinicians, researchers and other healthcare
         professionals convened in Chicago for the 2019 American Society of
@@ -110,7 +110,7 @@ subject: Newsletter
   <row class="footer">
     <columns>
       <p class="text-center" style="padding-top: 30px;">
-        &copy;2019 The Leukemia & Lymphoma Society. 3 International Drive, Suite
+        &copy;2021 The Leukemia & Lymphoma Society. 3 International Drive, Suite
         200
         <span class="menu-divider" style="width: 1px;"></span>
         Rye Brook, NY 10573
